@@ -1,4 +1,14 @@
-### renaming *source_sample to *source_samples (HEAD -> main)
+### a few more typos (HEAD -> main)
+>Wed, 24 Mar 2021 12:50:39 -0500
+
+>Author: Tyson Littenberg (tyson.littenberg@ligo.org)
+
+>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)
+
+
+
+
+### renaming *source_sample to *source_samples
 >Wed, 24 Mar 2021 10:55:45 -0500
 
 >Author: Tyson Littenberg (tyson.littenberg@ligo.org)
